# ai-simple-research-pipeline

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  API.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.override.yml.example  docker-compose.yml
ai_pipeline/: __init__.py  __main__.py  flow_options.py
ai_pipeline/documents/flow/: __init__.py
ai_pipeline/documents/task/: __init__.py
ai_pipeline/flows/: __init__.py
ai_simple_research_pipeline/: __init__.py  __main__.py  deploy.py  flow_options.py  http_server.py  research_pipeline.py
ai_simple_research_pipeline/documents/: __init__.py
ai_simple_research_pipeline/documents/flow/: __init__.py  final_report_document.py  findings_document.py  initial_summary_document.py  standardized_file_document.py  user_input_document.py
ai_simple_research_pipeline/documents/task/: __init__.py
ai_simple_research_pipeline/flows/: __init__.py
ai_simple_research_pipeline/flows/step_01_summary/: __init__.py  summary_flow.py
ai_simple_research_pipeline/flows/step_01_summary/tasks/: __init__.py  create_initial_summary.py  create_long_description.jinja2  create_long_description.py  create_short_description.jinja2  create_short_description.py  create_summary.jinja2  create_summary.py
ai_simple_research_pipeline/flows/step_02_standardization/: __init__.py  standardization_flow.py
ai_simple_research_pipeline/flows/step_02_standardization/tasks/: __init__.py  extract_metadata.jinja2  extract_metadata.py  standardize_content.jinja2  standardize_content.py  standardize_files.jinja2  standardize_files.py
ai_simple_research_pipeline/flows/step_03_review/: __init__.py  review_flow.py
ai_simple_research_pipeline/flows/step_03_review/tasks/: __init__.py  generate_findings.jinja2  generate_findings.py
ai_simple_research_pipeline/flows/step_04_report/: __init__.py  report_flow.py
ai_simple_research_pipeline/flows/step_04_report/tasks/: __init__.py  write_final_report.jinja2  write_final_report.py  write_full_report.py  write_short_report.jinja2  write_short_report.py
ai_simple_research_pipeline/prompts/: document_formatting_rules.jinja2
ai_simple_research_pipeline/server/: __main__.py  server.py
dependencies_docs/: ai-pipeline-core.md
projects/http_server_outputs/: full_report.md.meta.json  initial_summary.json.meta.json  long_description.md  long_description.md.meta.json  report-1758804680.json  short_description.md  short_description.md.meta.json  short_report.md.meta.json  status-1758804679.json  status-1758804680.json
projects/privateai/final_report/: final_report.md  full_report.md  short_report.md
projects/privateai/initial_summary/: initial_summary.json  long_description.md  short_description.md
projects/privateai/review_finding/: opportunities.json  questions.json  risks.json
projects/privateai/standardized_file/: privateai-project-description.md  privateai-project-description.yaml
projects/privateai2/final_report/: full_report.md  short_report.md
projects/privateai2/initial_summary/: initial_summary.json
projects/privateai2/review_finding/: opportunities.json  questions.json  risks.json
projects/privateai2/standardized_file/: privateai-project-description.md  privateai-project-description.yaml
scripts/: list_all_files.sh  test_middleware_e2e.py
tests/: conftest.py  test_research_pipeline.py
